Fix webhook alignment and border colors

--- a/src/components/flow/routers/webhook/WebhookRouterForm.module.scss
+++ b/src/components/flow/routers/webhook/WebhookRouterForm.module.scss
@@ -19,7 +19,6 @@
   flex-grow: 1;
   input {
     height: 36px;
-    border-color: #ccc;
   }
 }
 
